--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
 .script {
     font-family: "pictura";
     font-size: 1.3rem;
+    line-height: 0.9;
 }
 
 img.script-scan {
@@ -106,8 +107,8 @@ table td.tg-0lax.h2t {
     filter: invert(1);
 }
 
-.dark-theme img:not(.theme-img) {
-    filter: invert(1);
+.dark-theme img:not(.inverted-img) {
+    filter: invert(1) hue-rotate(180deg);
 }
 
 .cursive table.tg td img {
@@ -496,6 +497,11 @@ body,
     color: var(--text-primary);
 }
 
+strong {
+    font-family: courier, monospace;
+    font-weight: 500;
+}
+
 
 h1,
 h2,
@@ -586,6 +592,12 @@ p {
     hyphens: auto;
 }
 
+li {
+    margin-top: var(--par-margin);
+    margin-bottom: var(--par-margin);
+
+}
+
 pre.note {
     white-space: pre-wrap;
     border: 1px solid var(--text-light);
@@ -596,7 +608,7 @@ pre.note {
 }
 
 * {
-    line-height: 1.3;
+    line-height: 1.4;
 }
 
 a,
@@ -680,7 +692,7 @@ img {
     max-width: 100%;
 }
 
-.theme-img {
+.inverted-img {
     filter: var(--theme-img) contrast(1);
     mix-blend-mode: var(--blend-img);
 }
@@ -732,16 +744,33 @@ only screen and (min-height: 600px) {
     }
 
     .social-link {
-        display: inline-block;
+        /* display: inline-block; */
         width: 8.5rem;
+        white-space: nowrap;
     }
+
+    #sidebar a.social-link:hover {
+        color: var(--text-light);
+    }
+
+    #social p {
+        direction: rtl;
+    }
+
+    /* .social-link::before {
+        color: var(--text-primary)
+    } */
 
     .reddit-link::before {
         content: "u/picturamundi";
     }
 
+    .github-link:hover::before {
+        content: "github.com/picturamundi";
+    }
+
     .reddit-link:hover::before {
-        content: "reddit";
+        content: "reddit.com/u/picturamundi";
         text-align: left;
     }
 
@@ -750,15 +779,23 @@ only screen and (min-height: 600px) {
     }
 
     .keebtalk-link:hover::before {
-        content: "keebtalk"
+        content: "keebtalk.com/u/picturamundi"
     }
 
-    .twitter-link::before {
-        content: "@picturamundi"
+    .twitter-link::after {
+        content: "picturamundi@";
+    }
+
+    .twitter-link:hover::after {
+        content: ""
     }
 
     .twitter-link:hover::before {
-        content: "twitter"
+        content: "twitter.com/picturamundi"
+    }
+
+    .github-link::before {
+        content: "picturamundi";
     }
 }
 
@@ -967,14 +1004,18 @@ only screen and (max-height: 600px) {
         content: "twitter";
     }
 
+    .github-link::before {
+        content: "github";
+    }
+
     #theme-toggle {
         margin-top: calc(0.5 * var(--home-section-spacing));
         padding: 0px 1rem;
     }
 
-    .keebtalk-link {
+    /* .keebtalk-link {
         display: none;
-    }
+    } */
 
     #sidebar #banner-left {
         display: none;
